ajout d'une description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="col s12">
                     <h2>Ressources</h2>
                     <ul class="collection">
-                        <li class="collection-item"><a target="_blank" href="https://materializecss.com/">Materialize</a></li>
+                        <li class="collection-item"><a target="_blank" href="https://materializecss.com/">Materialize</a>, framework css</li>
                         <li class="collection-item"><a target="_blank" href="https://github.com/axios/axios">Axios</a></li>
                         <li class="collection-item"><a target="_blank" href="https://material.io/tools/icons/?style=baseline">Material icon</a></li>
                         <li class="collection-item"><a target="_blank" href="https://geo.api.gouv.fr/docs/communes">Api.gouv.fr</a></li>
