--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>CG | Localisation</title>
+        <title>CG | Loocalisation</title>
         <meta name="description" content="Information d'une ville par son code postal">
         <meta name="viewport" content="width=device-width"/>
 
