modification titre barre de recherche

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <!-- Search input-->
             <div class="row">
-                <h1>Chercher une ville par son code postal</h1>
+                <h1>Ceci est une barre de recherche</h1>
                 <form class="col s12" onsubmit="getCityByPostalCode(this.postalCode.value); return false;">
                     <div class="row">
                         <div class="input-field prefix col s12">
