--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
                     <h2>Ressources</h2>
                     <ul class="collection">
                         <li class="collection-item"><a target="_blank" href="https://materializecss.com/">Materialize</a>, framework css</li>
-                        <li class="collection-item"><a target="_blank" href="https://github.com/axios/axios">Axios</a></li>
-                        <li class="collection-item"><a target="_blank" href="https://material.io/tools/icons/?style=baseline">Material icon</a></li>
-                        <li class="collection-item"><a target="_blank" href="https://geo.api.gouv.fr/docs/communes">Api.gouv.fr</a></li>
+                        <li class="collection-item"><a target="_blank" href="https://github.com/axios/axios">Axios</a>, Promise based HTTP client for the browser and node.js</li>
+                        <li class="collection-item"><a target="_blank" 
+href="https://material.io/tools/icons/?style=baseline">Material icon</a>, font icone</li>
+                        <li class="collection-item"><a target="_blank" 
+href="https://geo.api.gouv.fr/docs/communes">Api.gouv.fr</a>, api recherche par code postal, recherche par 
+nom, par communes, ...</li>
                     </ul>
                 </div>
             </div>
